@@ -423,7 +423,8 @@ public class Keyspace
 
             if (lock == null)
             {
-                if ((System.currentTimeMillis() - mutation.createdAt) > DatabaseDescriptor.getWriteRpcTimeout())
+                // avoid throwing a WTE during commitlog replay
+                if (!isClReplay && (System.currentTimeMillis() - mutation.createdAt) > DatabaseDescriptor.getWriteRpcTimeout())
                 {
                     logger.trace("Could not acquire lock for {}", ByteBufferUtil.bytesToHex(mutation.key().getKey()));
                     Tracing.trace("Could not acquire MV lock");
@@ -436,12 +437,9 @@ public class Keyspace
                 {
                     //This view update can't happen right now. so rather than keep this thread busy
                     // we will re-apply ourself to the queue and try again later
-                    StageManager.getStage(Stage.MUTATION).execute(() -> {
-                        if (writeCommitLog)
-                            apply(mutation, true, true, isClReplay, mark);
-                        else
-                            apply(mutation, false, true, isClReplay, mark);
-                    });
+                    StageManager.getStage(Stage.MUTATION).execute(() ->
+                        apply(mutation, writeCommitLog, true, isClReplay, mark)
+                    );
 
                     return mark;
                 }
